common-applications/test-environment/opengauss-playground-backend-test/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: opengauss-playground-backend-test
  name: opengauss-playground-backend-test
