common-applications/test-environment/opengauss-playground-backend-test/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: opengauss-playground-backend
  namespace: opengauss-playground-backend-test
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      app: opengauss-playground-backend
  template:
    metadata:
      labels:
        app: opengauss-playground-backend
    spec:
      imagePullSecrets:
      - name: huawei-swr-image-pull-secret
      containers:
      - name: opengauss-playground-backend
        image: swr.cn-north-4.myhuaweicloud.com/opensourceway/opengauss-playground-backend-test:8f05cabf3ff6b16520fc8d7a4365ac225961f5e0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        readinessProbe:              #就绪探针
          initialDelaySeconds: 20    #延迟加载时间
          periodSeconds: 5           #重试时间间隔
          timeoutSeconds: 10         #超时时间设置
          failureThreshold: 5        #探测失败的重试次数
          httpGet:
            path: /healthz/readiness
            port: 8080
        livenessProbe:               #存活探针
          initialDelaySeconds: 60    #延迟加载时间
          periodSeconds: 5           #重试时间间隔
          timeoutSeconds: 5          #超时时间设置
          failureThreshold: 3        #探测失败的重试次数
          httpGet:
            path: /healthz/liveness
            port: 8080
        resources:
          requests:
            cpu: 1500m
            memory: 3000Mi
          limits:
            cpu: 1500m
            memory: 3000Mi
        volumeMounts:
          - mountPath: /opt/app/statisticslog
            name: static-log-data
      volumes:
      - name: static-log-data
        persistentVolumeClaim:
          claimName: cce-obs-opengauss-playground-manager
