common-applications/test-environment/opengauss-playground-backend-test/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: opengauss-playground-backend-service
  namespace: opengauss-playground-backend-test
spec:
  ports:
    - name: http-port-1
      protocol: TCP
      port: 80
      targetPort: 8080
  selector:
    app: opengauss-playground-backend
  type: ClusterIP
